// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button CTA button - icon after renders correctly 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--cta"
    type="submit"
  >
    <span
      class="ecl-button__container"
    >
      <span
        class="ecl-button__label"
        data-ecl-label="true"
      >
        CTA Button with icon after
      </span>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--fluid ecl-button__icon"
        data-ecl-icon=""
        focusable="false"
      >
        <use
          xlink:href="static/icons.svg#corner-arrow"
        />
      </svg>
    </span>
  </button>
</jest>
`;

exports[`Button CTA button - icon after renders correctly with extra attributes 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--cta"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    type="submit"
  >
    <span
      class="ecl-button__container"
    >
      <span
        class="ecl-button__label"
        data-ecl-label="true"
      >
        CTA Button with icon after
      </span>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--fluid ecl-button__icon"
        data-ecl-icon=""
        focusable="false"
      >
        <use
          xlink:href="static/icons.svg#corner-arrow"
        />
      </svg>
    </span>
  </button>
</jest>
`;

exports[`Button CTA button - icon after renders correctly with extra class names 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--cta custom-class custom-class--test"
    type="submit"
  >
    <span
      class="ecl-button__container"
    >
      <span
        class="ecl-button__label"
        data-ecl-label="true"
      >
        CTA Button with icon after
      </span>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--fluid ecl-button__icon"
        data-ecl-icon=""
        focusable="false"
      >
        <use
          xlink:href="static/icons.svg#corner-arrow"
        />
      </svg>
    </span>
  </button>
</jest>
`;

exports[`Button CTA button - icon before renders correctly 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--cta"
    type="submit"
  >
    <span
      class="ecl-button__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--fluid ecl-button__icon"
        data-ecl-icon=""
        focusable="false"
      >
        <use
          xlink:href="static/icons.svg#corner-arrow"
        />
      </svg>
      <span
        class="ecl-button__label"
        data-ecl-label="true"
      >
        CTA Button with icon before
      </span>
    </span>
  </button>
</jest>
`;

exports[`Button CTA button - icon only renders correctly 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--cta ecl-button--icon-only"
    type="submit"
  >
    <span
      class="ecl-button__container"
    >
      <span
        class="ecl-button__label"
        data-ecl-label="true"
      >
        CTA Button with icon only
      </span>
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--fluid ecl-button__icon"
        data-ecl-icon=""
        focusable="false"
      >
        <use
          xlink:href="static/icons.svg#corner-arrow"
        />
      </svg>
    </span>
  </button>
</jest>
`;

exports[`Button CTA renders correctly 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--cta"
    type="submit"
  >
    Call to action button
  </button>
</jest>
`;

exports[`Button Ghost inverted renders correctly 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--ghost-inverted"
    type="button"
  >
    Ghost inverted button
  </button>
</jest>
`;

exports[`Button Ghost renders correctly 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--ghost"
    type="button"
  >
    Ghost button
  </button>
</jest>
`;

exports[`Button Primary renders correctly 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--primary"
    type="submit"
  >
    Primary button
  </button>
</jest>
`;

exports[`Button Secondary renders correctly 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--secondary"
    type="button"
  >
    Secondary button
  </button>
</jest>
`;

exports[`Button Tertiary renders correctly 1`] = `
<jest>
  <button
    class="ecl-button ecl-button--tertiary"
    type="button"
  >
    Tertiary button
  </button>
</jest>
`;
